fix white space in big images while image is still big enough

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ img {
   flex-direction: column;
   justify-content: space-between;
   filter: contrast(1);
+  margin-bottom: 0;
 }
 
 .flickity-button {
